// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c0 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

<div>
    <h2>
      Price
    </h2>
    <div
      class="c0 currentMinPrice"
    >
      Minimum: USD 1000
      <a
        class="remove"
        href="#"
      >
        ✕
      </a>
    </div>
    <div
      class="c0 currentMaxPrice"
    >
      Maximum: USD 2000
      <a
        class="remove"
        href="#"
      >
        ✕
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when only max price is set 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c0 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

<div>
    <h2>
      Price
    </h2>
    <div
      class="c0 currentMaxPrice"
    >
      Maximum: USD 2000
      <a
        class="remove"
        href="#"
      >
        ✕
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when only min price is set 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c0 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

<div>
    <h2>
      Price
    </h2>
    <div
      class="c0 currentMinPrice"
    >
      Minimum: USD 1000
      <a
        class="remove"
        href="#"
      >
        ✕
      </a>
    </div>
  </div>
</DocumentFragment>
`;
